--- a/home.html
+++ b/home.html
@@ -66,6 +66,12 @@
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor ab debitis eius aut sed earum.<br></p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptatibus, nesciunt ullam voluptatum nihil accusantium!<br><br></p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, reiciendis quaerat. Tempore numquam sunt quod ipsam possimus cum quisquam corrupti similique voluptas hic, commodi ipsum quis reiciendis dignissimos distinctio asperiores.</p>
+                        <div class="contact us" id="contact">
+                        <p>Contact Us: </p>
+                        <a href="#" id="instagram"><i data-feather="instagram"></i></a>
+                        <a href="#" id="mail"><i data-feather="mail"></i></a>
+                        <a href="#" id="phone"><i data-feather="phone"></i></a>
+                    </div>    
                 </div>
                 </div>
             </div>
@@ -75,14 +81,32 @@
     <!--Shop Section Start-->
     <section id="#section3">
         <section id="shopping" class="shopping">
-            <h2>Shop Now!<br><br><br></h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur at earum architecto eaque tenetur dolorum vitae. Inventore, magni assumenda? Perspiciatis, quae. Autem culpa mollitia recusandae esse veritatis consequatur laborum. Fugiat?<br><br></p>
+            <h2>Shop Now!<br><br></h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur at earum architecto eaque tenetur dolorum vitae. Inventore, magni assumenda? Perspiciatis, quae.<br><br></p>
             <div class="row">
-                <div class="menu-card">
+                <div class="menu-card" style="width: 20rem; height: 30rem;">
                     <img src="img/1.jpg" alt="Equipment" class="menu-card-img">
-                    <h3 class="menu-card-title"> Equipment</h3>
-                    <p class="menu-card-text">Lorem ipsum dolor sit amet.</p>
-                    <a href="#more" class="cta">See More</a>
+                    <div class="menu-body">
+                        <h3 class="menu-card-title">Equipment<br><br></h3>
+                        <p class="menu-card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro, iusto.<br><br></p>
+                        <a href="#more" class="cta">See More</a>
+                    </div>
+                </div>
+                <div class="menu-card" style="width: 20rem; height: 30rem;">
+                    <img src="img/2.jpg" alt="Equipment" class="menu-card-img">
+                    <div class="menu-body">
+                        <h3 class="menu-card-title">Decoration<br><br></h3>
+                        <p class="menu-card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, voluptatibus?<br><br></p>
+                        <a href="#more" class="cta">See More</a>
+                    </div>
+                </div>
+                <div class="menu-card" style="width: 20rem; height: 30rem;">
+                    <img src="img/3.jpg" alt="Equipment" class="menu-card-img">
+                    <div class="menu-body">
+                        <h3 class="menu-card-title">Plant & Seed<br><br></h3>
+                        <p class="menu-card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid, dolorum?<br><br></p>
+                        <a href="#more" class="cta">See More</a>
+                    </div>
                 </div>
             </div>
         </section>
