--- a/home.html
+++ b/home.html
@@ -36,9 +36,17 @@
     </div>
 
     <div class="navbar-extra">
-        <a href="#" id="search"><i data-feather="search"></i></a>
-        <a href="#" id="user"><i data-feather="user"></i></a>
+        <a href="#" id="search"><i data-feather="search"></i></a>         
+        <a href="#" id="user"><i data-feather="user"></i></a>  
+        <div class="user-menu">
+            <ul class="sub-menu">
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">Settings</a></li>
+            <li><a href="#">Log out</a></li>
+            </ul>
+        </div>
     </div>
+   
     </nav>
     </section>
     <!-- Navbar End-->
@@ -62,7 +70,7 @@
                     <img src='img/cactus.jpg' alt="About Us">
                 </div>
                 <div class="content">
-                    <h4>Where you find greenies <br><br></h4>
+                    <h4>Find your greenies <br><br></h4>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor ab debitis eius aut sed earum.<br></p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptatibus, nesciunt ullam voluptatum nihil accusantium!<br><br></p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, reiciendis quaerat. Tempore numquam sunt quod ipsam possimus cum quisquam corrupti similique voluptas hic, commodi ipsum quis reiciendis dignissimos distinctio asperiores.</p>
@@ -84,7 +92,7 @@
             <h2>Shop Now!<br><br></h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur at earum architecto eaque tenetur dolorum vitae. Inventore, magni assumenda? Perspiciatis, quae.<br><br></p>
             <div class="row">
-                <div class="menu-card" style="width: 20rem; height: 30rem;">
+                <div class="menu-card" style="width: 20rem; height: 15rem;">
                     <img src="img/1.jpg" alt="Equipment" class="menu-card-img">
                     <div class="menu-body">
                         <h3 class="menu-card-title">Equipment<br><br></h3>
@@ -92,7 +100,7 @@
                         <a href="#more" class="cta">See More</a>
                     </div>
                 </div>
-                <div class="menu-card" style="width: 20rem; height: 30rem;">
+                <div class="menu-card" style="width: 20rem; height: 15rem;">
                     <img src="img/2.jpg" alt="Equipment" class="menu-card-img">
                     <div class="menu-body">
                         <h3 class="menu-card-title">Decoration<br><br></h3>
@@ -100,7 +108,7 @@
                         <a href="#more" class="cta">See More</a>
                     </div>
                 </div>
-                <div class="menu-card" style="width: 20rem; height: 30rem;">
+                <div class="menu-card" style="width: 20rem; height: 15rem;">
                     <img src="img/3.jpg" alt="Equipment" class="menu-card-img">
                     <div class="menu-body">
                         <h3 class="menu-card-title">Plant & Seed<br><br></h3>
@@ -113,6 +121,9 @@
     </section>
     <!--Shop Section End-->
 
+    <!--Footer section start-->
+
+    <!--Footer section end-->
 
 
     <!-- Feather Icon -->
